src/index.css
:root {
  --color-weight-100: hsl(0, 0%, 100%);
  --color-weight-200: hsl(0, 0%, 96%);
  --color-weight-300: hsl(0, 0%, 89%);
  --color-weight-400: hsl(222, 9%, 78%);
  --color-weight-500: hsl(213, 4%, 51%);
  --color-weight-600: hsl(216, 8%, 38%);
  --color-weight-700: hsl(216, 9%, 23%);
  --color-weight-800: hsl(220, 7%, 18%);
  --color-weight-900: hsl(216, 8%, 12%);
  --color-weight-1000: hsl(225, 9%, 9%);

  --orange: hsl(13, 75%, 58%);
  --orange-hover: hsl(21, 86%, 67%);
}

/* HTML STYLES */

html {
  box-sizing: border-box;
}

html,
body {
  height: 100%;
}

body {
  font-family: "Roboto", Arial, Helvetica, sans-serif;
  margin: 0;
}

* {
  box-sizing: inherit;
}

h1 {
  font-size: 2rem; /* 32px */
}

h2 {
  font-size: 1.75rem; /* 28px */
  font-weight: 300;
}

h3 {
  font-size: 1.5rem; /* 24px */
}

h4 {
  font-size: 1.25rem; /* 20px */
}

h5 {
  font-size: 1rem; /* 16px */
}

h6 {
  color: var(--orange);
}

h6,
p {
  font-size: 0.875rem; /* 14px */
}

img {
  user-select: none;
  max-width: 100%;
}

/* BUTTON STYLES */

.btn {
  cursor: pointer;
  border: none;
}

.menu-btn {
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: var(--color-weight-700);
  width: 56px;
  height: 56px;
}

.menu-btn--icon-container {
  display: flex;
  justify-content: center;
  align-items: center;
}

.menu-icon {
  width: 23px;
  height: 14px;
}

.close-icon {
  width: 18px;
}

.delete-file-btn {
  background-color: transparent;
  margin-right: 18px;
}

.save-file-btn,
.new-document-btn {
  color: var(--color-weight-100);
  background-color: var(--orange);
}

.save-file-btn {
  border-radius: 4px;
  width: 40px;
  height: 40px;
  margin: 8px;
  padding: 12px;
}

.save-file-btn:hover,
.new-document-btn:hover {
  background-color: var(--orange-hover);
}

.save-file-btn--icon {
  width: 1rem;
  height: 1rem;
}

.new-document-btn {
  border-radius: 4px;
  font-size: 0.9375rem;
  width: 100%;
  padding: 0.8em;
}

.preview-btn {
  background-color: transparent;
}

.preview-btn--icon:hover {
  color: var(--orange);
}

/* CUSTOM STYLES */

#root {
  height: 100%;
  overflow-x: hidden;
}

.page-content {
  position: relative;
  display: flex;
  flex-direction: column;
  height: 100%;
}

.page-content.menu-active {
  transform: translateX(250px);
  overflow-x: hidden;
}

.header {
  display: flex;
  align-items: center;
  background-color: var(--color-weight-800);
}

/* TODO: Move Index */
.menu {
  position: fixed;
  display: flex;
  flex-direction: column;
  background-color: var(--color-weight-900);
  width: 250px;
  height: 100vh;
  padding: 30px 24px;
  z-index: 10;
}

.menu--document-text {
  color: var(--color-weight-500);
  font-size: 0.875rem;
  text-transform: uppercase;
  letter-spacing: 2px;
  margin: 28px 0;
}

.menu--markdown-notes {
  margin-top: 1.5em;
}

.markdown-note {
  cursor: pointer;
  display: flex;
  align-items: center;
  width: 100%;
  margin-bottom: 1em;
  padding: 5px 0;
}

.markdown-note:hover {
  background-color: var(--color-weight-700);
  border-radius: 4px;
}

.markdown-note--icon-container {
  margin-right: 1em;
}

.markdown-note--creation-date,
.markdown-note--filename {
  margin: 0;
}

.markdown-note--creation-date {
  color: var(--color-weight-500);
  font-size: 0.8125rem;
}

.markdown-note--filename {
  color: var(--color-weight-100);
  font-size: 0.9375rem;
  margin-top: 3px;
}

.theme-btn-container {
  user-select: none;
  display: flex;
  align-items: center;
  margin-top: auto;
}

.theme-btn--icon-dark-container,
.theme-btn--icon-light-container {
  display: flex;
  align-items: center;
}

.theme-btn--icon-dark.selected,
.theme-btn--icon-light.selected {
  filter: brightness(0) invert(1);
}

.theme-btn {
  cursor: pointer;
  display: flex;
  background-color: var(--color-weight-600);
  border-radius: 14.5px;
  width: 48px;
  height: 24px;
  margin: 0 10px;
  padding: 6px;
}

.theme-btn--indicator {
  background-color: var(--color-weight-100);
  justify-self: flex-end;
  border-radius: 50%;
  width: 12px;
  height: 12px;
}

.theme-btn--dark {
  justify-content: flex-start;
}

.theme-btn--light {
  justify-content: flex-end;
}

.file-input {
  display: flex;
  align-items: center;
  flex-grow: 1;
  padding: 0 24px;
}

.file-input--icon {
  margin-right: 1em;
}

.file-input--input {
  background-color: transparent;
  color: var(--color-weight-100);
  border: none;
  font-size: 0.9375rem;
  caret-color: var(--orange);
  width: 100%;
  max-width: 272px;
}

.file-input--input:hover,
.file-input--input:focus {
  border-bottom: 1px solid var(--color-weight-100);
}

.main {
  display: flex;
  flex-direction: column;
  height: 100%;
}

/* TODO: Update preview button color on dark theme and on hover to var(--orange-hover) */
.preview-bar {
  display: flex;
  justify-content: space-between;
  background-color: var(--color-weight-200);
  color: var(--color-weight-500);
  padding: 0 16px;
}

.preview-bar.light {
  background-color: var(--color-weight-200);
  color: var(--color-weight-500);
}

.preview-bar.dark {
  background-color: var(--color-weight-900);
  color: var(--color-weight-400);
}

.preview-bar--text {
  user-select: none;
  text-transform: uppercase;
  letter-spacing: 2px;
}

.markdown-editor-container {
  flex-grow: 1;
  overflow: hidden;
}

.markdown-editor {
  font-family: "Roboto Mono", "Courier New", Courier, monospace;
  font-size: 0.875rem;
  border: none;
  resize: none;
  overflow: auto;
  width: 100%;
  height: 100%;
  margin: 0;
  padding: 1rem;
}

.markdown-editor.light {
  background-color: var(--color-weight-100);
  color: var(--color-weight-700);
}

.markdown-editor.dark {
  background-color: var(--color-weight-1000);
  color: var(--color-weight-400);
}

